--- a/src/app.css
+++ b/src/app.css
@@ -1,56 +1,129 @@
-body {
-  margin: 0;
-  padding: 0;
-}
-
 .App {
   text-align: center;
+  background-color:black;
+  border-color: olive;
+  border-width: 50px;
+  border-style:solid
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.appHeader{
+  padding-left: 0;
+  display:inline-block
+}
+.buttonHolder{
+  background-color: darkred;
+  width: 130px;
+  height: 520px;
+  float: left;
+  border-color: olive;
+  border-width: 10px;
+  border-style:outset;
+
 }
 
-ul {
-  list-style-type: none;
-  max-width: 80%;
+.btn{
+  margin: 15%;
+  height: auto;
+  width: auto;
 }
 
-li {
-  margin: 10px 0;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+#bookCards{
+  display: inline-block;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 1105px;
+  height: auto;
+  border-top: 10px;
+  border-color: olive;
+  border-style:outset;
+  background-image: url("https://i.pinimg.com/736x/2a/70/20/2a702019f54374764b71833f122e951f--antique-books-vintage-books.jpg");
 }
 
-.App-link {
-  color: #61dafb;
+#dataCard{
+  width: 500px;
+  background-color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#updateCardImg{
+  width: 250px
 }
 
-button {
-  font-size: calc(10px + 2vmin);
+.card-img-top{
+  width: 100px;
+  height: 150px;
+}
+.card{
+  width: 150px;
+  height: auto;
+  padding: 2%;
+  border-color: darkred;
+  border-width: 10px;
+  border-style: ridge;
+  background-color: tan;
+  margin: 2%;
+}
+
+.book {
+  display: flex;
+}
+
+.bookText {
+  color: black;
+  font-weight: bold;
+  white-space: nowrap;
+  max-width : 150px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.btn-three {
+  color: #FFF;
+  font-weight: bold;
+  transition: all 0.5s;
+  position: relative;
+}
+
+.btn-three::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgba(255,255,255,0.1);
+  transition: all 0.3s;
+}
+
+.btn-three:hover::before {
+  opacity: 0 ;
+  transform: scale(0.5,0.5);
+}
+
+.btn-three::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  transition: all 0.3s;
+  border: 1px solid rgba(255,255,255,0.5);
+  transform: scale(1.2,1.2);
+}
+
+.btn-three:hover::after {
+  opacity: 1;
+  transform: scale(1,1);
+}
+
+#home{
+  max-width: 25px;
+  max-height: 25px;
+  margin: 15%;
+}
+
+#home:hover {
+  transform: scale(1.5);
 }
