trying to publish to render one last time

--- a/src/app.css
+++ b/src/app.css
@@ -6,9 +6,11 @@ body{
   text-align: center;
   background-color:black;
   border-color: olive;
-  border-width: 50px;
+  border-width: 30px;
   max-width: 1125px;
   height:auto;
+  margin: auto;
+  padding: 2%;
   border-style:solid;
   overflow: hidden;
 }
@@ -37,9 +39,10 @@ body{
 #bookCards{
   display: inline-block;
   justify-content: center;
-  width: 800px;
-  border-top: 10px;
-  border-color: olive;
+  margin: auto;
+  width:97%;
+  border: 10px;
+  border-color: darkred;
   border-style:outset;
   background-image: url("https://i.pinimg.com/736x/2a/70/20/2a702019f54374764b71833f122e951f--antique-books-vintage-books.jpg");
 }
@@ -65,7 +68,8 @@ body{
 .card{
   width: 150px;
   height: auto;
-  padding: 2%;
+  padding-left: 5%;
+  padding-right: 5%;
   border-color: darkred;
   border-width: 10px;
   border-style: ridge;
