--- a/src/app.css
+++ b/src/app.css
@@ -21,11 +21,11 @@ body{
   overflow: hidden;
 }
 .buttonHolder{
-  background-color: darkred;
+  background-color: olive;
   width: 130px;
   height: 520px;
   float: left;
-  border-color: aliceblue;
+  border-color: darkred;
   border-width: 10px;
   border-style:outset;
 }
@@ -49,7 +49,13 @@ body{
 
 #dataCard{
   width: auto;
-  background-color: black;
+  background:
+  linear-gradient(
+  rgba(0, 0, 0, 0.6),
+  rgba(0, 0, 0, 0.6)
+  ), 
+  url("https://mcdn.wallpapersafari.com/medium/61/32/CqYQxN.jpg");
+  background-size: 580px, cover;
 }
 
 #updateCardImg{
@@ -64,7 +70,11 @@ body{
 .card-img-top{
   width: 100px;
   height: 150px;
+  border: 2px;
+  border-color: white;
+  border-style:outset;
 }
+
 .card{
   width: 150px;
   height: auto;
@@ -73,7 +83,13 @@ body{
   border-color: darkred;
   border-width: 10px;
   border-style: ridge;
-  background-color: tan;
+  background:
+    linear-gradient(
+    rgba(0, 0, 0, 0.6),
+    rgba(0, 0, 0, 0.6)
+    ), 
+    url("https://media.gettyimages.com/id/157181664/photo/ornate-old-book-cover.jpg?s=2048x2048&w=gi&k=20&c=aeHXjOLglM0xMDk9OZjXtX0UqiZWzjo2bNw7vGHch1k=");
+  background-size: 280px, cover;
   margin: 2%;
 }
 
@@ -82,7 +98,7 @@ body{
 }
 
 .bookText {
-  color: black;
+  color: white;
   font-weight: bold;
   white-space: nowrap;
   max-width : 150px;
@@ -90,8 +106,17 @@ body{
   text-overflow: ellipsis;
 }
 
+#isbnLink {
+  color: olive;
+  font-weight: bold;
+  font-style: italic;
+  text-decoration: underline;
+  
+}
+
+
 .btn-three {
-  color: #FFF;
+  color: white;
   font-weight: bold;
   transition: all 0.5s;
   position: relative;
